schema/testdata/validation_environment_variables/schema.keel
model MyModel {
  @permission(expression: ctx.env.FOO == "d", actions: [get])
}
